--- a/notebooks/ISCpresc.rmd
+++ b/notebooks/ISCpresc.rmd
@@ -10,109 +10,314 @@ output:
     toc_float: true
 ---
 
-```{r setup, include=FALSE}
+```{r setup, include=FALSE, message = FALSE}
 knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
-
-library(tidyverse)
-library(reactable)
-
-# prevents data loading in with numbers in scientific format
+# Prevents data loading in with numbers in scientific format
 options(scipen=999)
 
-```
+# Load packages
+library(tidyverse)
+library(reactable)
+library(plotly)
 
+# Identify project file
+here::i_am("Prototype_BC_Prescribing.Rproj")
 
-The following document sets out the observed and expected usage of the breast cancer medicines abemaciclib and neratinib. These medicines were selected as we have access to both primary and secondary care prescribing data and they are largely prescribed for an identifiable cohort of patients where we can estimate expected usage.  
-
-# Abemaciclib
-
-## Relevant guidance
-
-Abemaciclib, sold under the brand name Verzenios, was first recommended as a treatment for breast cancer in 2019, following publication of a NICE Technology appraisal (TA563). Since then, we have published two further Technology appraisals recommending abemiciclib for additional breast cancer indications. Details of currently published technology appraisals are included in the table below. 
-
-<br>
-
-```{r}
-
-Abemaciclib_table3<- read_csv(here::here("data/Abemaciclib_table3.csv"))
-
-reactable(Abemaciclib_table3, 
-          columns = list(Title = colDef(minWidth = 400)))
+# Load in functions
+source(here::here("scripts/rmd_functions.R"))
 
 ```
 
-## Therapeutic indications  
+```{r load_data, eval = TRUE}
 
-### Early Breast Cancer  
+# Load in TA table
+meds_ta_df <- readr::read_csv(here::here("data/clean/meds_ta_df.csv"), 
+                                col_select = 1:3)
+
+nat_meds_df <- readr::read_csv(here::here("data/clean/bc_meds_nat_2022_10.csv"))
+
+
+```
+
+
+# Individual medicines
+
+## Abemaciclib
+
+ 
+
+### Observed usage {.tabset}
+
+The table below is taken from data in the October 2022 publication of the [Innovation Scorecard](https://digital.nhs.uk/data-and-information/publications/statistical/nice-technology-appraisals-in-the-nhs-in-england-innovation-scorecard). It shows secondary care prescribing data by quarter in England for abemaciclib, also includes the very small amount of primary care data observed in the period.  
+
+The observed usage of abemaciclib has increased since it was first authorized in 2018. In 2021 it was approaching the estimated expected level of prescribing. 
+
+#### Observed usage
+
+```{r abemaciclib_usage_plot}
+
+single_med_plot(nat_meds_df, 
+                medicine = "abemaciclib", 
+                plot_title = "<b>Observed vs expected usage of abemaciclib</b>", 
+                ylabel = "People") %>% 
+        add_TA_lines(meds_ta_df, nat_meds_df, "abemaciclib")
+
+```
+
+#### Underlying data
+
+```{r abemaciclib_data}
+
+nat_meds_df %>% 
+    filter(treatment_name == "abemaciclib") %>% 
+    group_by(date, treatment_name) %>% 
+    summarise("Daily doses" = sum(numerator),
+              "Doses per 100,000 population" = round(sum(numerator)/(first(denominator)/100000), 2)) %>% 
+    ungroup() %>% 
+    arrange(desc(date)) %>% 
+    rename("Date" = date, "Medicine" = treatment_name) %>% 
+    reactable(
+        filterable = FALSE,
+        searchable = FALSE,
+        highlight = TRUE,
+        style = list(fontSize = "14px"),
+        defaultColDef = colDef(
+            format = colFormat(separators = TRUE)))
+
+```
+
+#### Relevant guidance
+
+```{r abemaciclib_TAs}
+create_med_table(meds_ta_df, "abemaciclib")
+
+```
+&nbsp;  
+
+#### Therapeutic indications  
+
+##### Early Breast Cancer
 
 Abemiciclib in combination with endocrine therapy is indicated for the adjuvant treatment of adult patients with hormone receptor (HR)-positive, human epidermal growth factor receptor 2 (HER2)-negative, node-positive early breast cancer at high risk of recurrence.  
 
-In pre- or perimenopausal women, aromatase inhibitor endocrine therapy should be combined with a luteinising hormone-releasing hormone (LHRH) agonist.  
+In pre- or perimenopausal women, aromatase inhibitor endocrine therapy should be combined with a luteinising hormone-releasing hormone (LHRH) agonist.
+&nbsp;  
 
-### Advanced or Metastatic Breast Cancer  
+##### Advanced or Metastatic Breast Cancer 
 
 Abemiciclib is indicated for the treatment of women with hormone receptor (HR)-positive, human epidermal growth factor receptor 2 (HER2)-negative locally advanced or metastatic breast cancer in combination with an aromatase inhibitor or fulvestrant as initial endocrine-based therapy, or in women who have received prior endocrine therapy.
 In pre- or perimenopausal women, the endocrine therapy should be combined with a LHRH agonist.
 
-<br>
+&nbsp;  
 
-## Eligible population  
+### Methodology
+#### Data source
+#### Eligible population
 
 Around 4,000 people are expected to receive treatment with abemaciclib in England annually.  
 
-This has been taken from the Resource impact template developed for the NICE technology appraisal 'Abemaciclib with endocrine therapy for adjuvant treatment of hormone receptor-positive, HER2-negative, node-positive early breast cancer at high risk of recurrence', published July 2022.  
+This has been taken from the Resource impact template developed for the NICE technology appraisal 'Abemaciclib with endocrine therapy for adjuvant treatment of hormone receptor-positive, HER2-negative, node-positive early breast cancer at high risk of recurrence', published July 2022.
+&nbsp;  
 
-<br>
+```{r abemaciclib_pop }
 
-```{r}
+abemaciclib_estimate <- read_csv(here::here("data/Abemaciclib_estimate.csv"))
 
-Abemaciclib_table1<- read_csv(here::here("data/Abemaciclib_table1.csv"))
+reactable(abemaciclib_estimate,
+        filterable = FALSE,
+        searchable = FALSE,
+        highlight = TRUE,
+        style = list(fontSize = "14px"),
+        defaultColDef = colDef(
+            format = colFormat(separators = TRUE)))
 
-reactable(Abemaciclib_table1)
+```
+&nbsp;  
+
+#### Assumptions and limitations
+&nbsp;  
+
+
+
+
+## Neratinib
+
+### Relevant guidance
+
+```{r neratinib_TAs}
+create_med_table(meds_ta_df, "neratinib")
 
 ```
 
-<br>
+### Observed vs expected usage
 
-## Observed usage  
+### Background information
+#### Therapeutic indications  
+##### Indication 1
+##### Indication 2
 
-The table below is taken from data in the April 2022 publication of the innovation scorecard. It shows secondary care prescribing data by quarter in England for abemaciclib, also includes the very small amount of primary care data observed in the period.  
+### Methodology
+#### Data source
+#### Eligible population
+#### Assumptions and limitations
 
-```{r}
 
-Abemaciclib_table2<- read_csv(here::here("data/Abemaciclib_table2.csv"))
 
-reactable(Abemaciclib_table2)
+
+&nbsp;  
+
+## Palbociclib
+
+### Relevant guidance
+
+```{r palbociclib_TAs}
+create_med_table(meds_ta_df, "palbociclib")
+
+```
+
+### Observed usage
+
+### Background information
+#### Therapeutic indications  
+##### Indication 1
+##### Indication 2
+
+### Methodology
+#### Data source
+#### Eligible population
+#### Assumptions and limitations
+
+
+
+
+
+&nbsp;  
+
+## Pembrolizumab
+
+### Relevant guidance
+
+```{r pembrolizumab_TAs}
+create_med_table(meds_ta_df, "pembrolizumab")
 
 ```
 
-<br>
+### Observed usage
 
-The observed usage of abemaciclib has increased since it was first authorized in 2018. In 2021 it was approaching the estimated expected level of prescribing.  
+### Background information
+#### Therapeutic indications  
+##### Indication 1
+##### Indication 2
 
-```{r}
+### Methodology
+#### Data source
+#### Eligible population
+#### Assumptions and limitations
 
-Abemaciclib_data3 <- read_csv(here::here("data/Abemaciclib3.csv"))
 
-annotation <- data.frame(
-   x = c(2019,2020.5, 2021),
-   y = c(750,750,750),
-   label = c("TA563", "TA725", "TA810"))
 
-h_line <- 4059
 
-ggplot(data=Abemaciclib_data3, aes(x=Year, y=People)) +
-    geom_line(stat='identity',color="darkblue", fill= "#228096", size = 0.8) +
-    geom_hline(yintercept = h_line) +
-    geom_text(aes(2020, h_line, label = "Expected usage", vjust = -1)) +
-    geom_point(fill= "#228096", size = 2) +
-    ylim(0, 5000) +
-    xlim(2018,2021)+
-    theme_minimal() +
-    labs(title = "Abemaciclib primary and secondary care prescribing, England, 2018-2021") +
-    geom_text(data=annotation, aes(x=x, y=y, label=label),
-           color="orange", 
-           size=4 , angle=0, fontface="bold")
+
+&nbsp;  
+
+## Ribociclib
+
+### Relevant guidance
+
+```{r ribociclib_TAs}
+create_med_table(meds_ta_df, "ribociclib")
 
 ```
+
+### Observed usage
+
+### Background information
+#### Therapeutic indications  
+##### Indication 1
+##### Indication 2
+
+### Methodology
+#### Data source
+#### Eligible population
+#### Assumptions and limitations
+
+
+
+
+
+&nbsp;  
+
+## Trastuzumab deruxtecan
+
+### Relevant guidance
+
+```{r trastuzumab_der_TAs}
+create_med_table(meds_ta_df, "trastuzumab deruxtecan")
+
+```
+
+### Observed usage
+
+### Background information
+#### Therapeutic indications  
+##### Indication 1
+##### Indication 2
+
+### Methodology
+#### Data source
+#### Eligible population
+#### Assumptions and limitations
+
+
+
+
+
+&nbsp;  
+
+## Trastuzumab emtansine
+
+### Relevant guidance
+
+```{r trastuzumab_emt_TAs}
+create_med_table(meds_ta_df, "trastuzumab emtansine")
+
+```
+
+### Observed usage
+
+### Background information
+#### Therapeutic indications  
+##### Indication 1
+##### Indication 2
+
+### Methodology
+#### Data source
+#### Eligible population
+#### Assumptions and limitations
+
+
+
+
+&nbsp;  
+
+## Tucatinib
+
+### Relevant guidance
+
+```{r tucatinib}
+create_med_table(meds_ta_df, "tucatinib")
+
+```
+
+### Observed usage
+
+### Background information
+#### Therapeutic indications  
+##### Indication 1
+##### Indication 2
+
+### Methodology
+#### Data source
+#### Eligible population
+#### Assumptions and limitations
 
