--- a/notebooks/ISCpresc.rmd
+++ b/notebooks/ISCpresc.rmd
@@ -25,18 +25,18 @@ library(downloadthis)
 here::i_am("Prototype_BC_Prescribing.Rproj")
 
 # Load in functions
-source(here::here("scripts/rmd_functions.R"))
+source(here::here("R/rmd_functions.R"))
 
 ```
 
 ```{r load_data, eval = TRUE}
 
 # Load in TA table
-meds_ta_df <- readr::read_csv(here::here("data/clean/meds_ta_df.csv"), 
+meds_ta_df <- readr::read_csv(here::here("data/bc_meds_ta_df.csv"), 
                                 col_select = 1:3)
 
 # Load in national level data
-nat_meds_df <- readr::read_csv(here::here("data/clean/bc_meds_nat_2022_10.csv"))
+nat_meds_df <- readr::read_csv(here::here("data/bc_meds_nat_2022_10.csv"))
 
 ```
 
