--- a/notebooks/ISCpresc.rmd
+++ b/notebooks/ISCpresc.rmd
@@ -25,14 +25,18 @@ library(downloadthis)
 here::i_am("Prototype_BC_Prescribing.Rproj")
 
 # Load in functions
-source(here::here("R/rmd_functions.R"))
+source(here::here("R/helper_functions.R"))
+source(here::here("R/rmd_function.R"))
+source(here::here("R/chart_functions.R"))
+source(here::here("R/table_functions.R"))
+source(here::here("R/text_functions.R"))
 
 ```
 
 ```{r load_data, eval = TRUE}
 
 # Load in TA table
-meds_ta_df <- readr::read_csv(here::here("data/bc_meds_ta_df.csv"), 
+meds_ta_df <- readr::read_csv(here::here("data/bc_med_tas_df.csv"), 
                                 col_select = 1:3)
 
 # Load in national level data
